Fix modal z-index to covering FAB

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -218,7 +218,7 @@ header {
     opacity: 0;
     pointer-events: none;
     transition: opacity 0.3s;
-    z-index: 1000;
+    z-index: 2000;
 }
 
 .modal-overlay.active {
